<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>medico_tarjeta_horario</class>
 <widget class="QWidget" name="medico_tarjeta_horario">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>370</width>
    <height>210</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <widget class="QLabel" name="label">
   <property name="geometry">
    <rect>
     <x>5</x>
     <y>10</y>
     <width>359</width>
     <height>149</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">background: #F4F4F4;
border-radius: 10px;</string>
   </property>
   <property name="text">
    <string/>
   </property>
  </widget>
  <widget class="QLabel" name="lbl_foto_medico_gestionar_horario">
   <property name="geometry">
    <rect>
     <x>20</x>
     <y>24</y>
     <width>100</width>
     <height>100</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">background:none;</string>
   </property>
   <property name="text">
    <string/>
   </property>
   <property name="pixmap">
    <pixmap resource="../../resources.qrc">:/imagenes/Imagenes/imgPrueba.png</pixmap>
   </property>
   <property name="scaledContents">
    <bool>true</bool>
   </property>
  </widget>
  <widget class="QLabel" name="lbl_nombre_medico_tarjeta_horario">
   <property name="geometry">
    <rect>
     <x>130</x>
     <y>20</y>
     <width>201</width>
     <height>20</height>
    </rect>
   </property>
   <property name="font">
    <font>
     <family>Montserrat</family>
    </font>
   </property>
   <property name="styleSheet">
    <string notr="true">background:none;</string>
   </property>
   <property name="text">
    <string>Luis Rolando Banderas Barrera</string>
   </property>
  </widget>
  <widget class="QLabel" name="lbl_motivo_medico_tarjeta_horario">
   <property name="geometry">
    <rect>
     <x>180</x>
     <y>50</y>
     <width>111</width>
     <height>16</height>
    </rect>
   </property>
   <property name="font">
    <font>
     <family>Montserrat</family>
    </font>
   </property>
   <property name="styleSheet">
    <string notr="true">background:none;</string>
   </property>
   <property name="text">
    <string>Dolor de cabeza</string>
   </property>
  </widget>
  <widget class="QLabel" name="lb_hora_medico_tarjeta_horario">
   <property name="geometry">
    <rect>
     <x>140</x>
     <y>80</y>
     <width>121</width>
     <height>20</height>
    </rect>
   </property>
   <property name="font">
    <font>
     <family>Montserrat</family>
    </font>
   </property>
   <property name="styleSheet">
    <string notr="true">background:none;
</string>
   </property>
   <property name="text">
    <string>17:30:00 - 18:00:00</string>
   </property>
  </widget>
  <widget class="QPushButton" name="btn_gestionar_medico_tarjeta_horario">
   <property name="geometry">
    <rect>
     <x>60</x>
     <y>170</y>
     <width>251</width>
     <height>28</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">*{
	background-color: white;
	color: #3E64FF;
	border: 1px solid #3E64FF;
	border-radius: 5px;
	padding: 5px;
}

:hover{
	color: white;
	background-color: #3E64FF;
}</string>
   </property>
   <property name="text">
    <string>Gestionar</string>
   </property>
  </widget>
  <widget class="QLabel" name="lbl_prioridad_medico_tarjeta_horario">
   <property name="geometry">
    <rect>
     <x>170</x>
     <y>110</y>
     <width>70</width>
     <height>20</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>70</width>
     <height>0</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>70</width>
     <height>16777215</height>
    </size>
   </property>
   <property name="font">
    <font>
     <family>Montserrat</family>
    </font>
   </property>
   <property name="styleSheet">
    <string notr="true">background:none;</string>
   </property>
   <property name="text">
    <string>Prioridad:</string>
   </property>
  </widget>
  <widget class="QLabel" name="lbl_pontiPrioridar_medic_tarjeta_horario">
   <property name="geometry">
    <rect>
     <x>250</x>
     <y>109</y>
     <width>20</width>
     <height>20</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>20</width>
     <height>20</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>20</width>
     <height>20</height>
    </size>
   </property>
   <property name="styleSheet">
    <string notr="true">background:none;</string>
   </property>
   <property name="text">
    <string/>
   </property>
   <property name="pixmap">
    <pixmap resource="../../resources.qrc">:/imagenes/Imagenes/Ellipse7.png</pixmap>
   </property>
   <property name="scaledContents">
    <bool>true</bool>
   </property>
  </widget>
  <zorder>label</zorder>
  <zorder>btn_gestionar_medico_tarjeta_horario</zorder>
  <zorder>lbl_foto_medico_gestionar_horario</zorder>
  <zorder>lbl_nombre_medico_tarjeta_horario</zorder>
  <zorder>lbl_motivo_medico_tarjeta_horario</zorder>
  <zorder>lb_hora_medico_tarjeta_horario</zorder>
  <zorder>lbl_prioridad_medico_tarjeta_horario</zorder>
  <zorder>lbl_pontiPrioridar_medic_tarjeta_horario</zorder>
 </widget>
 <resources>
  <include location="../../resources.qrc"/>
 </resources>
 <connections/>
</ui>
